--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -88,7 +88,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
                     </div>
@@ -132,8 +132,8 @@
                                 <img class="img-fluid" src="./img/kate-gleason-icon.svg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">2016</div>
+                                <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
                     </div>
@@ -414,10 +414,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <img class="img-fluid d-block mx-auto" src="./img/MadeSundayEvenThoughFosterThoughtWeCouldnt.JPG" alt="..." />
+                                    <p>Top Row from the left: Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
+                                       <br> Middle row from the left: Morgan Dupure, Adrianna Bueti <br> Bottom row from the left: Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
