Updated Timeline and Home Page
Added Images and changed background images

--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -102,7 +102,7 @@
                                 <img class="img-fluid" src="./img/paw-icon.svg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
+                                <div class="portfolio-caption-heading">2016</div>
                                 <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                                 <img class="img-fluid" src="./img/paw-icon.svg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
+                                <div class="portfolio-caption-heading">2016</div>
                                 <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                 <img class="img-fluid" src="./img/kate-gleason-icon.svg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">2016</div>
+                                <div class="portfolio-caption-heading">2017</div>
                                 <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                                 <img class="img-fluid" src="./img/tiger-icon.svg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
+                                <div class="portfolio-caption-heading">2018</div>
                                 <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
@@ -379,10 +379,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <img class="img-fluid d-block mx-auto" src="./img/MadeSundayEvenThoughFosterThoughtWeCouldnt.JPG" alt="..." />
+                                    <p>Top Row from the left: Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
+                                        <br> Middle row from the left: Morgan Dupure, Adrianna Bueti <br> Bottom row from the left: Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -414,8 +413,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <img class="img-fluid d-block mx-auto" src="./img/MadeSundayEvenThoughFosterThoughtWeCouldnt.JPG" alt="..." />
-                                    <p>Top Row from the left: Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
+                                    <img class="img-fluid d-block mx-auto" src="./img/2017 Team.jpg" alt="..." />
+                                    <p><strong>Top Row from the left:</strong> Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
                                        <br> Middle row from the left: Morgan Dupure, Adrianna Bueti <br> Bottom row from the left: Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
                                     <ul class="list-inline">
                                         <li>
@@ -448,9 +447,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="./img/2018 Team.jpg"/>
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
