Updated Sites Social Media Icons

--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -27,6 +27,8 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="./css/styles_timeline.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./css/all.min.css">
+        
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -252,16 +254,36 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer py-4">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div>
-                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/ritpaintball?lang=en"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/RITPaintball"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/rittigerspaintball"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
+        <footer class="FOOTER">
+            <ul id="UL">
+                <li id="LI">
+                    <a href="https://www.facebook.com/RITPaintball/" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-facebook-f"></span>
+                    </a>
+                </li>
+                <li id="LI">
+                    <a href="https://www.instagram.com/rittigerspaintball/" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-instagram"></span>
+                    </a>
+                </li>
+                <li id="LI">
+                    <a href="https://twitter.com/ritpaintball?lang=en" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-twitter"></span>
+                    </a>
+                </li>
+            </ul>
         </footer>
         <!-- Portfolio Modals-->
         <!-- Portfolio item 1 modal popup-->
@@ -380,18 +402,8 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <img class="img-fluid d-block mx-auto" src="./img/MadeSundayEvenThoughFosterThoughtWeCouldnt.JPG" alt="..." />
-                                    <p>Top Row from the left: Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
-                                        <br> Middle row from the left: Morgan Dupure, Adrianna Bueti <br> Bottom row from the left: Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Lines
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Branding
-                                        </li>
-                                    </ul>
+                                    <p><strong>Top row from the left:</strong> Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
+                                        <br><strong> Middle row from the left:</strong> Morgan Dupure, Adrianna Bueti <br><strong> Bottom row from the left:</strong> Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
                                         Close Project
@@ -414,18 +426,8 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <img class="img-fluid d-block mx-auto" src="./img/2017 Team.jpg" alt="..." />
-                                    <p><strong>Top Row from the left:</strong> Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
-                                       <br> Middle row from the left: Morgan Dupure, Adrianna Bueti <br> Bottom row from the left: Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Southwest
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Website Design
-                                        </li>
-                                    </ul>
+                                    <p><strong>Top Row from the left:</strong> Simon Buchheit, Hunter Rotondo, Tim Salecky, Will Redmond, Ryan Hirschman, David Bergquist, Michael Belle
+                                       <br><strong> Middle row from the left:  </strong> Rob Coolidge, Mike Troise <br> <strong>Bottom row from the left:</strong> Sean Alfonso, Kilian Bestram, Zach Easley, Shawn Foster, Mike Stabile, Tyler Brennan, Angus Chow  </p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
                                         Close Project
