--- a/Official Site/About.html
+++ b/Official Site/About.html
@@ -8,6 +8,7 @@
         <title>About</title>
         <!-- Bootstrap Icons-->
         <link href="./css/styles_about.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./css/all.min.css">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
@@ -121,9 +122,41 @@
                 </div>
         </section>
         <!-- Footer-->
+        <footer class="FOOTER">
+            <ul id="UL">
+                <li id="LI">
+                    <a href="https://www.facebook.com/RITPaintball/" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-facebook-f"></span>
+                    </a>
+                </li>
+                <li id="LI">
+                    <a href="https://www.instagram.com/rittigerspaintball/" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-instagram"></span>
+                    </a>
+                </li>
+                <li id="LI">
+                    <a href="https://twitter.com/ritpaintball?lang=en" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-twitter"></span>
+                    </a>
+                </li>
+            </ul>
+        </footer>
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Company Name</div></div>
         </footer>
+        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- SimpleLightbox plugin JS-->
