--- a/Official Site/Donate.html
+++ b/Official Site/Donate.html
@@ -27,6 +27,7 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="./css/styles_donate.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./css/all.min.css">
     </head>
     <body>
         <!-- Background Video-->
