--- a/Official Site/index.html
+++ b/Official Site/index.html
@@ -27,6 +27,8 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="./css/styles_home.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./css/all.min.css">
+        
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -193,15 +195,41 @@
                     </div>
                   </div>
                 </div>
-                    <div class="social d-flex justify-content-center">
-                        <a class="mx-2" href="https://twitter.com/ritpaintball?lang=en" target="_blank"><i class="fab fa-twitter" ></i></a>
-                        <a class="mx-2" href="https://www.facebook.com/RITPaintball" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="mx-2" href="https://www.instagram.com/rittigerspaintball" target="_blank"><i class="fab fa-instagram"></i></a>
-                    </div>
-            </div>
         </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; RIT Tigers Paintball 2021</div></footer>
+        <footer class="FOOTER">
+            <ul id="UL">
+                <li id="LI">
+                    <a href="https://www.facebook.com/RITPaintball/" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-facebook-f"></span>
+                    </a>
+                </li>
+                <li id="LI">
+                    <a href="https://www.instagram.com/rittigerspaintball/" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-instagram"></span>
+                    </a>
+                </li>
+                <li id="LI">
+                    <a href="https://twitter.com/ritpaintball?lang=en" target="_blank">
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN"></span>
+                        <span id="SPAN" class="fab fa-twitter"></span>
+                    </a>
+                </li>
+            </ul>
+        </footer>
+        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
