--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -34,7 +34,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="./index.html"><img src="./img/paw-icon.png" alt="..." /></a>
+                <a class="navbar-brand" href="./index.html"><img src="./img/PaintballPhotographyIcon2.JPG" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -119,7 +119,7 @@
                                 <img class="img-fluid" src="./img/paw-icon.svg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">2016</div>
+                                <div class="portfolio-caption-heading">2017</div>
                                 <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                                 <img class="img-fluid" src="./img/kate-gleason-icon.svg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">2017</div>
+                                <div class="portfolio-caption-heading">2018</div>
                                 <div class="portfolio-caption-subheading text-muted">Roster</div>
                             </div>
                         </div>
@@ -366,23 +366,12 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Finish
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Identity
-                                        </li>
-                                    </ul>
+                                    <img class="img-fluid d-block mx-auto" src="./img/MadeSundayEvenThoughFosterThoughtWeCouldnt.JPG" alt="..." />
+                                    <p><strong>Top row from the left:</strong> Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
+                                        <br><strong> Middle row from the left:</strong> Morgan Dupure, Adrianna Bueti <br><strong> Bottom row from the left:</strong> Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
-                                        Close Project
+                                        Close Roster
                                     </button>
                                 </div>
                             </div>
@@ -401,12 +390,12 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <img class="img-fluid d-block mx-auto" src="./img/MadeSundayEvenThoughFosterThoughtWeCouldnt.JPG" alt="..." />
-                                    <p><strong>Top row from the left:</strong> Gavin Drabik, Ryan Hirschman, Steven Dill, Luke McKeown, Jordan Matteo, Tom Brenner, Matt Clark, Mike Troise, Aaron Bishop
-                                        <br><strong> Middle row from the left:</strong> Morgan Dupure, Adrianna Bueti <br><strong> Bottom row from the left:</strong> Tim Salecky, Mike Stabile, Josh Martin, Rob Coolidge, Brian Bernard, Jacob Allison</p>
+                                    <img class="img-fluid d-block mx-auto" src="./img/2017 Team.jpg" alt="..." />
+                                    <p><strong>Top Row from the left:</strong> Simon Buchheit, Hunter Rotondo, Tim Salecky, Will Redmond, Ryan Hirschman, David Bergquist, Michael Belle
+                                        <br><strong> Middle row from the left:  </strong> Rob Coolidge, Mike Troise <br> <strong>Bottom row from the left:</strong> Sean Alfonso, Kilian Bestram, Zach Easley, Shawn Foster, Mike Stabile, Tyler Brennan, Angus Chow  </p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
-                                        Close Project
+                                        Close Roster
                                     </button>
                                 </div>
                             </div>
@@ -425,9 +414,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <img class="img-fluid d-block mx-auto" src="./img/2017 Team.jpg" alt="..." />
-                                    <p><strong>Top Row from the left:</strong> Simon Buchheit, Hunter Rotondo, Tim Salecky, Will Redmond, Ryan Hirschman, David Bergquist, Michael Belle
-                                       <br><strong> Middle row from the left:  </strong> Rob Coolidge, Mike Troise <br> <strong>Bottom row from the left:</strong> Sean Alfonso, Kilian Bestram, Zach Easley, Shawn Foster, Mike Stabile, Tyler Brennan, Angus Chow  </p>
+                                    <img class="img-fluid d-block mx-auto" src="./img/2018 Team.jpg" alt="..." />
+                                    <p><strong>Top Row from the left:</strong>Luke McKeown, Ryan Hirschman, Simon Buchheit, Angus Chow, Chris Heist, Hunter Rotondo, Dave Bergquist, Jordan Matteo (Alumni)
+                                       <br><strong> Middle row from the left:  </strong> Sean Alfonso, William Redmond, Kilian Bestram, Zack Easley, Aaron Posner, Jesse Bairan, Elena Matteo <br>
+                                       <strong>Bottom:</strong> Tim Salecky</p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
                                         Close Project
@@ -449,7 +439,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <img class="img-fluid d-block mx-auto" src="./img/2018 Team.jpg"/>
+                                    <img class="img-fluid d-block mx-auto" src=""/>
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
