--- a/Official Site/index.html
+++ b/Official Site/index.html
@@ -34,12 +34,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                   <div class=" float-start"> 
+                <div class=" float-start"> 
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto text-light">
                             <li class="nav-item"><a class="nav-link" href="./About.html">About</a></li>
@@ -57,7 +52,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">RIT Tigers Paintball</h1> <!--See if we can move this over a cm-->
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Tigers on three!!</h2>
-                        <a class="btn btn-primary" href="#projects">Get Started</a> <!--change color to orange-->
+                        <a class="btn btn-primary" href="#projects">Get Started!</a> <!--change color to orange-->
                     </div>
                 </div>
             </div>
