--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -165,7 +165,7 @@
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="text-center">
-                <iframe width="500" height="400" src="https://www.youtube.com/embed/Y9N3pnE0oVE" 
+                <iframe class="VideoSize" src="https://www.youtube.com/embed/Y9N3pnE0oVE" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
